# spell-fulfillment

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/api/: dashboard.py  deps.py
app/api/v1/: auth.py  dev.py  etsy.py  health.py  metrics.py  orders.py  router.py  spell_types.py  spells.py  tasks.py
app/core/: security.py
app/db/: session.py
app/models/: __init__.py  base.py  etsy_token.py  operator.py  order.py  satisfaction.py  spell.py  spell_type.py  task.py
app/schemas/: auth.py  metrics.py  order.py  spell.py  spell_type.py  task.py  test_order.py
app/services/: test_orders.py
app/services/claude/: __init__.py  client.py  generator.py  prompts.py
app/services/etsy/: __init__.py  client.py  oauth.py  orders.py  rate_limiter.py  scheduler.py
app/services/fulfillment/: __init__.py  email.py
frontend/templates/: base.html  dashboard.html  login.html  metrics.html  order_detail.html  orders.html  settings.html  tasks.html
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_is_test_order.py  003_add_cast_type.py
scripts/: create_admin.py  create_test_orders.py  fix_spell_type_templates.py  seed_spell_types.py
